--- a/3_imputation.Rmd
+++ b/3_imputation.Rmd
@@ -1,8 +1,10 @@
 ---
-title: "3_imputation"
-author: "Laura Botzet & Ruben Arslan"
+title: " "
+author: " "
 date: "28 September 2017"
-output: html_document
+output: 
+  html_document:
+    code_folding: "show"
 editor_options: 
   chunk_output_type: console
 ---
