--- a/3_imputation.Rmd
+++ b/3_imputation.Rmd
@@ -1,6 +1,6 @@
 ---
-title: " "
-author: " "
+title: "3_imputation"
+author: "Laura Botzet & Ruben Arslan"
 date: "28 September 2017"
 output: 
   html_document:
